--- a/2021.11.06 („Enigma Otiliei” de George Călinescu)/Eseu personaj principal roman realist balzacian/Eseu_personaj_principal_roman_realist_balzacian.tex
+++ b/2021.11.06 („Enigma Otiliei” de George Călinescu)/Eseu personaj principal roman realist balzacian/Eseu_personaj_principal_roman_realist_balzacian.tex
@@ -1,103 +1,69 @@
-%%
-%% Basic LaTeX template by Andy3153
-%% created   04/10/21 ~ 18:21:32
-%% modified1 15/10/21 ~ 23:15:05
-%% modified2 03/11/21 ~ 18:37:45
-%%
+% Include the preamble
+\input{../../preamble.tex}
 
-% Document preamble
-\documentclass[
-12pt,
-a4paper
-]{article}
+\newcommand{\operatitle}{\textbfit{„Enigma Otiliei”}} % title of the text
+\newcommand{\operaauthor}{George Călinescu} % author of the text
 
-% Packages
-\usepackage[
-margin=2.7cm,                % Margin size
-marginparwidth=2cm,          % Margin note size
-marginparsep=3mm             % Space between margin and text
-]{geometry}
-\usepackage[utf8]{inputenc}  % UTF-8 support
-\usepackage[T1]{fontenc}     % Proper hyphenation
-\usepackage[romanian]{babel} % Romanian characters support
-\usepackage{indentfirst}     % Add paragraph indentation even after a section
-\usepackage{marginnote}      % Notes on the margins of a document (more advanced \marginpar)
-\usepackage{titlesec}        % Customize titles
-
-% Custom titles, sections, subsections etc. format
-\titleformat*{\section}{\large\bfseries}
-\titleformat{\subsection}{\normalfont\normalfont\bfseries}{}{0pt}{}
-
-% Page numbering
-%\pagenumbering{gobble} % uncomment if you want to disable it
-
-% Custom commands
-% Format: \newcommand{\command}{action (add '\ ' or '{}' if it won't add a space properly)}
-\newcommand{\rom}[1]{\uppercase\expandafter{\romannumeral #1\relax}} % Roman numerals
-\newcommand{\operatitle}{\textbf{\textit{Enigma Otiliei\ }}} % title of the commented opera
-\newcommand{\operainitialtitle}{\textbf{\textit{„Părinții Otiliei”}}} % title of the commented opera
-\newcommand{\operaauthor}{George Călinescu\ } % author of the commented opera
-
-% Basic document info
 \title{Eseu despre particularitățile de construcție a personajului principal dintr-un roman realist-balzacian}
-\date{}   % Show no date in the title
-\author{} % Empty author to not get a warn about missing author
+
 
 \begin{document}
 \maketitle % Show the title
 %\reversemarginpar % put margin notes on left instead of on right
 
-
 % Beginning of text
+
 
 \subsection{Context}
 
-Publicat în 1938, romanul \operatitle apare la sfârșitul perioadei interbelice și este al doilea dintre cele patru romane scrise de \operaauthor. Teoreticianul romanului românesc optează pentru romanul obiectiv și metoda balzaciană, dar depășește acest program estetic, apelând la elemente de modernitate.
+Publicat în 1938, romanul \operatitle\ apare la sfârșitul perioadei interbelice și este al doilea dintre cele patru romane scrise de \operaauthor. Teoreticianul romanului românesc optează pentru romanul obiectiv și metoda balzaciană, dar depășește acest program estetic, apelând la elemente de modernitate.
 
-\section{Ilustrarea elementelor de structură și de compoziție ale romanului, semnificative pentru realizarea personajului din romanul studiat {\footnotesize (de exemplu: acțiune, conflict, relații temporale și spațiale, incipit, final, tehnici narative, perspectivă narativă, registre stilistice, limbajul personajelor etc.)}}
+
+\section{Ilustrarea elementelor de structură și de compoziție ale romanului, semnificative pentru realizarea personajului din romanul studiat {\footnotesize\normalfont(de exemplu: acțiune, conflict, relații temporale și spațiale, incipit, final, tehnici narative, perspectivă narativă, registre stilistice, limbajul personajelor etc.)}}
 
 \marginnote{roman balzacian și citadin prin temă}[-0.3cm]
 Prin temă, romanul este balzacian și citadin. Caracterul citadin ține de modernismul lovinescian.
 
-Titlul inițial, \operainitialtitle, reflectă idea balzaciană a paternității, deoarece fiecare dintre personaje determină cumva soarta orfanei Otilia, ca niște „părinți”. Autorul schimbă titlul din motive editoriale și deplasează accentul de la motivul realist al paternității la misterul protagonistei.
+Titlul inițial, \textbfit{„Părinții Otiliei”}, reflectă idea balzaciană a paternității, deoarece fiecare dintre personaje determină cumva soarta orfanei Otilia, ca niște „părinți”. Autorul schimbă titlul din motive editoriale și deplasează accentul de la motivul realist al paternității la misterul protagonistei.
 
 \marginnote{perspectiva narativă obiectivă}[-0.3cm]
 Întâmplările din roman sunt relatate la persoana a \rom{3}-a, din perspectiva unui narator omniscient și omniprezent. Naratorul se ascunde în spatele diverselor măști, fapt dovedit și de limbajul uniformizat.
 
-Romanul, alcătuit din douăzeci de capitole, este construit pe mai multe planuri narative, care urmăresc destinul unor personaje, prin acumularea detaliilor: destinul Otiliei, al lui Felix, al membrilor clanului Tulea, al lui Stănică etc. Un plan urmărește lupa dusă de clanul Tulea pentru obținerea moștenirii lui Costache Giurgiuveanu și înlăturarea Otiliei Mărculescu.
+Romanul, alcătuit din douăzeci de capitole, este construit pe mai multe planuri narative, care urmăresc destinul unor personaje, prin acumularea detaliilor: destinul Otiliei, al lui Felix, al membrilor clanului Tulea, al lui Stănică etc. Un plan urmărește lupta dusă de clanul Tulea pentru obținerea moștenirii lui Costache Giurgiuveanu și înlăturarea Otiliei Mărculescu.
 \marginnote{compoziție}[-0.3cm]
 Al doilea plan prezintă destinul tânărului Felix Sima care, rămas orfan, vine la București pentru a studia Medicina, locuiește în casa tutorelui său, avarul Costache Giurgiuveanu, și trăiește iubirea adolescentină pentru Otilia.
 
-\marginnote{incipitul fixează cadrul temporal și spațial}[-0.5cm]
+\marginnote{incipitul fixează cadrul temporal și spațial}[-0.9cm]
 Incipitul romanului realist fixează veridic cadrul temporal (\textit{„într-o seară de la începutul lui iulie 1909”}) și spațial (strada Antim din București, casa lui moș Costache), prezintă principalele personaje, sugerează conflictul și trasează principalele planuri epice. Finalul este închis prin rezolvarea conflictului și este urmat de un epilog.
 
-\marginnote{                                            }[0.3cm]
-Simetria incipitului cu finalul realizează prin descrierea străzii și a casei lui moș Costache, din perspectiva lui Felix.
 \marginnote{simetria incipitului cu finalul}[-0.4cm]
+Simetria incipitului cu finalul se realizează prin descrierea străzii și a casei lui moș Costache, din perspectiva lui Felix.
 
 \marginnote{conflictul}[2.3cm]
-Conflictul romanului se bazează pe relațiile dintre două familii înrudite. Membrii acestora aparțin unor tipologii care conturează universul social. Din prima familie fac parte Costache Giurgiuveanu și Otilia Mărculescu (o adolescentă orfană, fiica celei de-a doua soții decedate a lui Costache). În această familie pătrunde Felix Sima, nepotul bătrânului, care vine la București pentru a studia Medicina. Tânărul ca locui la unchiul și tutorele său legal, moș Costache. Un alt intrus este Leonida Pascalopol, prieten al bătrânului. Afecțiunea moșierului pentru Otilia, pe care o cunoaște de mică și dorința de a avea o familie care să-i alunge singurătatea reprezintă motivele vizitelor repetate ale lui Pascalopol în casa lui moș Costache. A doua familie, vecină și înrudită, care aspiră la moștenirea averii bătrânului, este familia surorii acestuia, Aglae.
+Conflictul romanului se bazează pe relațiile dintre două familii înrudite. Membrii acestora aparțin unor tipologii care conturează universul social. Din prima familie fac parte Costache Giurgiuveanu și Otilia Mărculescu (o adolescentă orfană, fiica celei de-a doua soții decedate a lui Costache). În această familie pătrunde Felix Sima, nepotul bătrânului, care vine la București pentru a studia Medicina. Tânărul va locui la unchiul și tutorele său legal, moș Costache. Un alt intrus este Leonida Pascalopol, prieten al bătrânului. Afecțiunea moșierului pentru Otilia, pe care o cunoaște de mică și dorința de a avea o familie care să-i alunge singurătatea reprezintă motivele vizitelor repetate ale lui Pascalopol în casa lui moș Costache. A doua familie, vecină și înrudită, care aspiră la moștenirea averii bătrânului, este familia surorii acestuia, Aglae.
 
 \marginnote{conflictul erotic}[0.3cm]
-Perspectiva moștenirii averii lui Costache Giurgiuveanu generează un dublu conflict succesoral (ostilitatea manifestată de Aglae împotriva orfanei Otilia și interesul ui Stănică pentru averea bătrânului). Conflictul erotic privește rivalitatea adolescentului Felix și a maturului Pascalopol pentru iubirea Otiliei.
+Perspectiva moștenirii averii lui Costache Giurgiuveanu generează un dublu conflict succesoral (ostilitatea manifestată de Aglae împotriva orfanei Otilia și interesul lui Stănică pentru averea bătrânului). Conflictul erotic privește rivalitatea adolescentului Felix și a maturului Pascalopol pentru iubirea Otiliei.
+
 
 \section{Precizarea statutului social, psihologic, moral etc. al personajului ales}
 
 \marginnote{Otilia}[0.3cm]
 Studentă la Conservator, înzestrată cu un temperament de artistă, Otilia reprezintă tipul cochetei, dar întruchipează, în egală măsură, misterul feminin.
 
-\marginnote{tehnici moderne: comportamentismul și reflectarea poliedrică}[2,5cm]
+\marginnote{tehnici moderne: comportamentismul și reflectarea poliedrică}[1,5cm]
 Portretul Otiliei este realizat prin tehnici moderne. Până în capitolul al \rom{16}-lea, Otilia este prezentată mai ales prin comportamentism (fapte, gesturi, replici), cititorul cunoscându-i gândurile doar din propriile mărturisiri, fără a beneficia de perspectiva unică a naratorului. Această tehnică este dublată, în același spațiu narativ, de reflectarea poliedrică a personalității Otiliei în conștiința celorlalte personaje (pluriperspectivismul), ceea ce conferă ambiguitate personajului, iar în plan simbolic sugerează enigma, misterul feminității. Relativizarea imaginii prin reflectarea în mai multe oglinzi paralele alcătuiește un portret complex și contradictoriu: \textit{„fe-fetița”} cuminte și iubitoare pentru moș Costache, fata exuberantă, \textit{„admirabilă”}, \textit{„superioară”} pentru Felix, femeia capricioasă, \textit{„cu un temperament de artistă”} pentru Pascalopol, \textit{„o dezmățată, o stricată”} pentru Aglae, \textit{„o fată deșteaptă”}, cu spirit practic, pentru Stănică, o rivală în căsătorie pentru Aurica, \textit{„cea mai elegantă conservatoristă și mai mândră”} pentru colegii lui Felix, care invidiază familiaritatea tânărului cu Otilia. Însă cel care intuiește adevărata dimensiune a personalității Otiliei este Weissmann, prietenul lui Felix, care, îi spune acestuia, la moment dat: \textit{„Orice femeie care iubește un bărbat fuge de el, ca să rămână în amintirile lui ca o apariție luminoasă. Domnișoara Otilia trebuie să fie o fată inteligentă. După câte mi-ai spus, înțeleg că te iubește.”}
 
 Scriitorul însuși justifică misterul personajului feminin prin prisma imaturității lui Felix, afirmând: \textit{„Nu Otilia are o enigmă, ci Felix crede că are. Pentru orice tânăr de douăzeci de ani, enigmatica va fi în veci fata care îl va respinge, dându-i dovezi de afecțiune.”}
 
-\section{Ilustrarea trăsăturilor personajului ales, prin secvențe na\-ra\-ti\-ve/si\-tu\-a\-ții semnificative sau prin citate comentate}
+
+\section{Ilustrarea trăsăturilor personajului ales, prin secvențe narative/situații semnificative sau prin citate comentate}
 
 \marginnote{portretul fizic}[0.3cm]
 Întâiul portret fizic al Otiliei este realizat din perspectiva lui Felix, pe care ea îl primește cu căldură în casa lui moș Costache. \textit{„Verișoara”} Otilia pe care o știa doar din scrisori îl surprinde în mod plăcut, mai ales că frumusețea ei contrastează cu portretul fetei bătrâne Aurica, iar delicatețea, cu răutatea Aglaei.
 
-\marginnote{caracterizare directă}[0.3cm]
-În scena jocului de table, Aglae îi așează pe Felix și Otilia în aceeași categorie, prin caracterizare directă: \textit{„N-am știut, faci azil de orfani”}, îi reproșează ea fratelui său. Condiția de orfan a fetei, evidențiată de primul titlu al romanului, \operainitialtitle, este precizată în această scenă din cel dintâi capitol.
+\marginnote{caracterizare directă}[0.2cm]
+În scena jocului de table, Aglae îi așează pe Felix și Otilia în aceeași categorie, prin caracterizare directă: \textit{„N-am știut, faci azil de orfani”}, îi reproșează ea fratelui său. Condiția de orfan a fetei, evidențiată de primul titlu al romanului, \textbfit{„Părinții Otiliei”}, este precizată în această scenă din cel dintâi capitol.
 
 \marginnote{caracterizare indirectă}[0.0cm]
 Portretul Otiliei se conturează mai ales prin caracterizare indirectă. Astfel, încă din seara sosirii lui Felix în casa lui moș Costache, neavând o cameră pregătită, Otilia îi oferă cu generozitate odaia ei, prilej pentru Felix de a descoperi
@@ -105,15 +71,16 @@ Portretul Otiliei se conturează mai ales prin caracterizare indirectă. Astfel,
 în amestecul de dantele, partituri, romane franțuzești, cutii de pudră și parfumuri o parte din personalitatea exuberantă a Otiliei. În cazul acestui portret se apelează la tehnica balzaciană a caracterizării prin descrierea interiorului.
 
 Otilia reprezintă întruchiparea misterului feminin, iar comportamentul   derutant al fetei îl descumpănește pe Felix, pentru că nu-și poate explica schimbările de atitudine, trecerea ei bruscă de la o stare la alta. Otilia însăși recunoaște cu sinceritate față de Felix că este o ființă dificilă și se autocaracterizează astfel:
-\marginnote{autocaracterizare}[0.3cm]
+\marginnote{autocaracterizare}[0.2cm]
 \textit{„Sunt foarte capricioasă, vreau să fiu liberă!} [...] \textit{Eu am un temperament nefericit: mă plictisesc repede, sufăr când sunt contrariată”}.
 
-\marginnote{Felix - intelectualul ambițios}[0.3cm]
-\marginnote{Otilia - cocheta}[2.3cm]
+\marginnote{Felix -- intelectualul ambițios}[0.3cm]
+\marginnote{Otilia -- cocheta}[2.3cm]
 Ultima întâlnire dintre Felix și Otilia, înaintea plecării ei din țară împreună cu Pascalopol, este esențială pentru înțelegerea personalității tinerilor și a atitudinii lor față de iubire. Dacă Felix este intelectualul ambițios, care nu suportă ideea de a nu realiza nimic în viață și pentru care femeia reprezintă un sprijin în carieră, Otilia este cocheta, care crede că \textit{„rostul femeii este să placă, în afară de asta neputând exista fericire”}. Otilia concepe iubirea în felul aventuros al artistului, cu dăruire și libertate absolută, în timp ce Felix este dispus să aștepte oricât în virtutea promisiunii că, la un moment dat, se va căsători cu Otilia. Dându-și seama de această diferență, dar și de faptul că ea ar putea reprezenta o piedică în calea realizării profesională a lui Felix, Otilia îl părăsește pe tânăr și alege siguranța căsătoriei cu Pascalopol.
 
 \marginnote{epilog}[0.8cm]
-În epilog, câțiva ani mai târziu de la aceste întâmplări, Felix se întâlnește în tren cu Pascalopol, care îi dezvăluie faptul că i-a redat Otiliei cu generozitate libertatea de a-și trăi tinerețea, iar ea a devenit soția unui conte exotic. \textit{A fost o fată delicioasă, dar ciudată. Pentru mine e o enigmă”}, afirmă Pascalopol despre Otilia. Felix observă în fotografia pe care i-o arată moșierul o femeie frumoasă, dar în care nu o mai recunoaște pe tânăra exuberantă de odinioară, fiindcă \textit{„un aer de platitudine feminină stingea totul.”}
+În epilog, câțiva ani mai târziu de la aceste întâmplări, Felix se întâlnește în tren cu Pascalopol, care îi dezvăluie faptul că i-a redat Otiliei cu generozitate libertatea de a-și trăi tinerețea, iar ea a devenit soția unui conte exotic. \textit{„A fost o fată delicioasă, dar ciudată. Pentru mine e o enigmă”}, afirmă Pascalopol despre Otilia. Felix observă în fotografia pe care i-o arată moșierul o femeie frumoasă, dar în care nu o mai recunoaște pe tânăra exuberantă de odinioară, fiindcă \textit{„un aer de platitudine feminină stingea totul.”}
+
 
 \subsection{Concluzie}
 
